feat: function store (#178)
